Fixed some of FindBugs warnings